--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
       <h1>Where I'm From</h1>
       <p>Chennai, India</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <ul>
+          <li>Field Hockey</li>
+          <li>Watching Friends</li>
+          <li>Eating food</li>
+        </ul>
       <h1>What's your dream job?</h1>
       <p>Details here...</p>
       <h1>Where do you live?</h1>
-      <p>Melbourne</p>
+      <p>Melbourne, Australia</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>Details here...</p>
     </section>
