--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
       <h1>Where I'm From</h1>
       <p>Chennai, India</p>
       <h1>What are your favorite hobbies?</h1>
-      <ul>
-          <li>Field Hockey</li>
-          <li>Watching Friends</li>
-          <li>Eating food</li>
-      </ul>
+      <p>Watching Friends, field hockey and eating food</p>
       <h1>What's your dream job?</h1>
       <p>Details here...</p>
       <h1>Where do you live?</h1>
